[develop] 取得所有貨幣資訊
